fixed styling bug on mobile

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ h3 {
     }
 
     .container {
-        margin: auto 100px;
+        margin: auto 30px;
     }
 
     .spacer {
@@ -213,5 +213,11 @@ h3 {
 
     .carousell {
         margin-top: 40px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    section {
+        width: 90%;
     }
 }
